# Balbot

Arduino/: ccodeBBIPcontroller.cpp
Arduino/FeatherstoneBalance/FeatherstoneBalance/: FeatherstoneBalance.ino
Arduino/IMUcommtest/: IMUcommtest.ino  arduino_secrets.h  thingProperties.h
Arduino/IMUcommtest/IMUmotorcommtest/: IMUMPUtest.ino  IMUmotorcommtest.ino
Arduino/SDcardspeedtest/: SDcardspeedtest.ino
DataProcessing/: DataProcessing.asv  DataProcessing.m
RP4B Code/: CMakeLists.txt  CMakePresets.json  main.cpp
RP5 Code/: CMakeLists.txt  Motortelemetrytest.cpp  main.cpp
RP5 Code/lib/: MPU6050_6Axis_MotionApps20.h
Test Functions and calculations/: quat_2_euler_calc_proof.m
